snapshots/com/wadpam/openserver/errors/1-SNAPSHOT/errors-1-20121002.045704-1.pom.sha1
54e3c7022cf91e95bde2c39626450e9bd0d6ef19